# rust-chat

./: Cargo.toml
client/: Cargo.toml
client/src/: console.rs  main.rs
model/: Cargo.toml
model/src/: lib.rs
model/src/canal/: canal.rs  mod.rs
model/src/client/: client.rs
model/src/message/: message.rs
webservice/: .env  Cargo.toml
webservice/migrations/2021-05-20-153043_messages/: up.sql
webservice/migrations/2021-05-21-112745_add_missing_params_to_message/: down.sql  up.sql
webservice/migrations/2021-05-21-130111_clients/: up.sql
webservice/migrations/2021-05-21-131634_clients-pass-fix/: down.sql  up.sql
webservice/migrations/2021-05-21-132543_canal/: down.sql  up.sql
webservice/src/: main.rs  server.rs  session.rs
webservice/src/db/: connection.rs  connector.rs  mod.rs  models.rs  schema.rs
webservice/src/db/canals/: connector.rs  mod.rs  models.rs
webservice/src/db/client/: connector.rs  mod.rs  models.rs
webservice/src/db/clients/: connector.rs  mod.rs  models.rs
webservice/src/db/messages/: connector.rs  mod.rs  models.rs
webservice/src/db/messages/heap/: mod.rs
webservice/src/db/messages/mysql/: connector.rs  mod.rs  models.rs
webservice/src/websocket/: mod.rs  server.rs  session.rs
webservice/src/websocket/commands/: join.rs  list.rs  mod.rs  name.rs
webservice/static/: websocket.html
