[package]
name = "chat_client"
version = "0.1.0"
authors = ["engla <arthur.englebert@actito.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
actix = "0.11.1"
actix-rt = "2.2.0"
async-std = "1.9.0"

env_logger = "0.8"

chat_model = { path = "../model" }