[package]
name = "chat_model"
version = "0.1.0"
authors = ["engla <arthur.englebert@actito.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.20"
data-encoding = "2.3.2"
uuid = { version = "0.8.2", features= ["v4"]}
chrono = "0.4.19"