[package]
name = "chat_webservice"
version = "0.1.0"
authors = ["engla <arthur.englebert@actito.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust-chat-server"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"

actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.5.0"

rand = "0.7"
bytes = "0.5"
byteorder = "1.3"
futures = "0.3"
env_logger = "0.8"
serde = "1"
serde_json = "1"

chrono = "0.4.19"
diesel = { version = "1.4.4", features = ["mysql", "chrono", "r2d2"] }
dotenv = "0.15.0"
chat_model = { path = "../model" }
